<resources>
    <string name="app_name">CS196Hackerspace</string>

    <string name="text_view_default">Hello, World!</string>
    <string name="switch1_label">Enable Button</string>
    <string name="text_view_disabled">Button Disabled</string>
    <string name="checkbox_enable">Enable Everything</string>
    <string name="button_main">Send Info</string>
    <string name="nameText">Name:</string>
    <string name="phoneText">Phone #:</string>
    <string name="emailText">Email:</string>
    <string name="addressText">Address:</string>
    <string name="title_activity_firebase">FirebaseActivity</string>

</resources>
